 23. WillQualify and Qualify commands now have UNIQUE argument.
 24. New INI entry: XPMOD, and changes to Prop_ModExperience also.
 25. Common Account menu now configurable (help/acctmenu.txt)
 26. New forum posts now support attachments.
 27. WeatherAffects behavior can now be more independent of the actual weather.
 28. New language: FoxSpeak
 29. New Spell "Know Province"

# Build 5.10.1 Release 1/01/2023
  1. FasterRecovery expanded and new char stat REJUVRATE for Prop*Adjuster
  2. Ability Components now support their own private socials list.
  3. Deity and Component rituals and triggers now have their own MUDGrinder editor.
  4. PLAYERDEATH now supports PURGE X for a "lives remaining" type effect.
  5. New chant: Summon Animals
  6. Stat and train costs can now be specified in terms of a local currency
  7. WHERE Archon command now supports MQL updates via WHERE UPDATE: ...
  8. Disease_Vampirism greatly expanded, and its features argument-controllable
  9. New INI entry DEFAULTABILITYARGS for setting default property/skill arguments.
 10. LOGOUTMASK now supports a tick argument for how long to keep the mob in game.
 11. Decorating is now recipe driven, and has numerous new options
 12. Commands now support copying other player settings: 
     CONFIG COPY [playername] /CHANNELS COPY [playername]/COLORSET COPY [playername]
 13. New archon LIST option: Orphans, for rooms without incoming exits
 14. MODIFY command supports MQL with MODIFY UPDATE:...
 15. DESTROY command supports MQL with DESTROY DELETE: from ...
 16. Clan Government role 'CLAN_MOTD' changed to 'READ_MOTD'. 'CREATE_MOTD' added.
 17. New Zappermask: +-CLANLEVEL, for filtering a members clan's level
 18. New Bombs: Bomb_SpellBlast
 19. New Spell: Spell_DetonateBombs
 20. Prop_Closed* properties now support a zappermask for the object.
 21. New common skill: Black Marketeering, for Thieves, Burglars, and Gaolers
 22. New poisons: anesthesia, and hallucinogen, hazia, and new Drug Cutting recipes