@@ -1027,7 +1027,7 @@ kill you.
 
 DUEL=\
 Command : DUEL\n\r\
-Usage   : DUEL [MOB NAME]\n\r\
+Usage   : DUEL [MOB NAME] (UNFAIR)\n\r\
 Example : duel karlthedragon\n\r\
 Short(s): \n\r\
 Causes your character to either challenge the target player to a duel, \
@@ -1036,7 +1036,8 @@ fight between two players that is without consequences.  Neither player \
 can die while dueling, nor suffer permanent loss or harm.  Players fight \
 until one flees for longer than 30 seconds, or one of them is "killed", \
 at which point the duel ends and both players are restored to the pre-duel \
-state of health.
+state of health.  The UNFAIR flag must be added by BOTH duelers if they \
+want to override level difference limitations.
 
 TEAR=DESTROY
 SMASH=DESTROY
