@@ -28,6 +28,7 @@
  27. WeatherAffects behavior can now be more independent of the actual weather.
  28. New language: FoxSpeak
  29. New Spell "Know Province"
+ 30. Duelers can now engage in unfair fights.
 
 # Build 5.10.1 Release 1/01/2023
   1. FasterRecovery expanded and new char stat REJUVRATE for Prop*Adjuster
